--- a/styles/style.css
+++ b/styles/style.css
@@ -183,3 +183,8 @@ h2.heading > i{
     font-family: cursive;
     font-weight: bold;
 }
+
+.active > a{
+    background: #8EB8B8 !important;
+    color: #323232 !important;
+}
